minor UI changes + settings screen done!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#FF0A84FF</color>
     <color name="label_tertiary">#1EEBEBF5</color>
+    <color name="row_arrow">#FF555556</color>
 </resources>
