--- a/app/src/main/res/drawable/chevron_right.xml
+++ b/app/src/main/res/drawable/chevron_right.xml
@@ -4,6 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="@color/label_tertiary"
+      android:fillColor="#EBEBF5"
+      android:fillAlpha="0.3"
       android:pathData="M9.4,18 L8,16.6 12.6,12 8,7.4 9.4,6 15.4,12Z"/>
 </vector>
