finished custom unstyled text field

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primary">#FF0A84FF</color>
     <color name="label_tertiary">#1EEBEBF5</color>
     <color name="row_arrow">#FF555556</color>
+    <color name="top_app_bar">#0b0b0b</color>
 </resources>
